ViTables ChangeLog
==================
** September 24, 2013 **
python3-support: several small typos have been fixed.

python3-support: removed some non required code and fixed an small bug.

** September 23, 2013 **
python3-support: added support for raw strings attributes.

** September 21, 2013 **
python3-support: some modules regarding plugins have been debugged.

python3-support: fixed a small bug in the timeseries plugin.

** September 19, 2013 **
python3-support: data presentation has been debugged and simplified.

** September 18, 2013 **
python3-support: the use of range has been reviewed.

python3-support: a workaround for an annoying KDE bug has been applied.

** September 17, 2013 **
python3-support: the tests folder has been removed.

python3-support: the node Properties dialog has been partially reworked.

** September 12, 2013 **
python3-support: fixed minor errors in several modules.

python3-support: fixed some syntax errors in several modules.

python3-support: fixed the use of the logger console by the logging module.

python3-support: new syntax used in a couple of methods in vtapp.py.

python3-support: the examples directory has been updated.

** September 11, 2013 **
Local branch python3-support has been added.

python3-support branch: shebang lines updated.

python3-support branch: u'some text' has been replaced with 'some text'.

python3-support branch: calls to unicode() replaced with calls to str()

python3-support branch: remaining old style unicode literals removed.

** September 03, 2013 **
Bug #22 has been fixed.

Some minor mistakes have been fixed in the Users' Guide.

** February 10, 2013 **
The Import from CSV plugin uses the plugin utilities module now.

Fixed a bug in the Export to CSV plugin.

The plugin utilities module has been updated.

** February 07, 2013 **
Time series plugin support for soft/external links has been fixed.

** February 06, 2013 **
<Thanks To> tab of the About ViTables dialog has been updated.
