@@ -95,15 +95,15 @@ setup(name = 'ViTables', # The name of the distribution
     'Operating System :: POSIX', 
     'Programming Language :: Python'], 
     scripts = ['scripts/vitables'], 
-    packages = ['vitables', 'vitables.docBrowser', 'vitables.h5db', 
-        'vitables.nodeProperties', 'vitables.queries', 'vitables.preferences', 
-        'vitables.vtTables', 'vitables.vtWidgets', 'vitables.plugins', 
+    packages = ['vitables', 'vitables.docbrowser', 'vitables.h5db', 
+        'vitables.nodeprops', 'vitables.queries', 'vitables.preferences', 
+        'vitables.vttables', 'vitables.vtwidgets', 'vitables.plugins', 
         'vitables.plugins.csv', 'vitables.plugins.timeseries'], 
     package_data = {
-        'vitables.nodeProperties': ['*.ui'], 
+        'vitables.nodeprops': ['*.ui'], 
         'vitables.preferences': ['*.ui'], 
         'vitables.queries': ['*.ui'], 
-        'vitables.vtWidgets': ['*.ui'], 
+        'vitables.vtwidgets': ['*.ui'], 
         'vitables.plugins': ['*.ui'], 
         'vitables': ['icons/*.*', 'icons/*/*.*', 'htmldocs/*.*', 
             'htmldocs/*/*.*'], 
