@@ -5,6 +5,18 @@ python3-support: several small typos have been fixed.
 
 python3-support: removed some non required code and fixed an small bug.
 
+python3-support: refactoring package names to follow PEP 8.
+docBrowser -> docbrowser
+
+python3-support: refactoring package names to follow PEP 8.
+nodeProperties -> nodeprops
+
+python3-support: refactoring package names to follow PEP 8.
+vtTables -> vttables
+
+python3-support: refactoring package names to follow PEP 8.
+vtWidgets -> vtwidgets
+
 ** September 23, 2013 **
 python3-support: added support for raw strings attributes.
 
